<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#3B000000"
    tools:context=".SellerActivity.CreateShopActivity">


    <LinearLayout
        android:layout_margin="23dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:inputType="number"
            android:id="@+id/referralshopid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/refferalshopid" />

        <EditText
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:hint="@string/shopname"
            android:id="@+id/shopname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textMultiLine"
            android:layout_marginTop="20dp"
            android:hint="@string/shopDescription"
            android:id="@+id/shopdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/shoplocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/shoplocation" />

        <TextView
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/shoplogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/shopLogo"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:hint="@string/chosefile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/shopbanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/shopBanner"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:hint="@string/chosefile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox

                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textCheckBox"
                android:textSize="22sp"
                android:text="@string/acceot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/create_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/create_shop"
            android:padding="20dp"
            android:text="@string/createShop"
            android:textColor="@color/white" />


    </LinearLayout>




</LinearLayout>