<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#DDD6D6"
    tools:context=".SellerBalanceActivity.WithdrawBalanceActivity">


    <ScrollView

        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCard"
            app:cardCornerRadius="8dp"
            app:contentPadding="5dp"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:background="#68E9EBF3"
                android:id="@+id/linearLaout_main"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/shop_balance_withdraw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="Reciver Phone Number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/selectype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/withdraw_select"
                    android:layout_marginTop="5dp"
                    android:hint="Select Withdraw type"
                    android:padding="12dp"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/EnterAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <EditText
                    android:id="@+id/amount"
                    android:layout_marginTop="10dp"
                    android:hint="Enter Amount"
                    android:padding="12dp"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button


                    android:layout_gravity="end"
                    android:padding="10dp"
                    android:id="@+id/withdraw_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn"
                    android:text="@string/withdrawbtn"
                    android:textAllCaps="false"
                    android:textColor="#fff">

                </Button>


                <View
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>


                <TextView
                    android:id="@+id/typeCashBalance"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/typeCashBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/amount_d"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/paywith"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/payWith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/reviverNumber"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/reciverNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView

                    android:layout_marginTop="5dp"
                    android:id="@+id/NewBalance"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/newBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <Button

                    android:id="@+id/download_invoice"
                    android:padding="10dp"
                    android:background="@drawable/btn"
                    android:layout_marginTop="13dp"
                    android:text="@string/downloadInvoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>





    </ScrollView>



</RelativeLayout>