<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerActivity.AddProductsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/add_product_image"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:background="@color/dark"
                android:id="@+id/select_Image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/imgae_icon" />

            <EditText
                android:id="@+id/product_name"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:hint="@string/product_name"
                android:padding="10dp" />

            <EditText
                android:inputType="number"
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/price"
                android:padding="10dp" />


            <Spinner

                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner

                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/product_description"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/description"
                android:padding="10dp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:inputType="number"
                        android:id="@+id/discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/discount" />

                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/dark"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <EditText
                        android:id="@+id/from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/dark"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/add_btn"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:background="@drawable/add_btn"
                android:text="@string/add"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </ScrollView>



</RelativeLayout>