<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SellerBalanceActivity.AddBalanceActivity">

    <LinearLayout
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/paymentWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="30dp"
                android:textColor="@color/white"
                android:background="@color/red"
                android:layout_weight="1"
                android:id="@+id/bkash"
                android:text="@string/bkash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_margin="30dp"
                android:textColor="@color/white"
                android:background="@color/nil"
                android:layout_weight="1"
                android:id="@+id/bank"
                android:text="@string/bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:layout_below="@id/liner1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linerSub"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </ScrollView>


</RelativeLayout>