<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#1d1111"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryBoyActivity.DeliveryLoginActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/sanglass"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="250dp"/>

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatEditText
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:id="@+id/name_boy_id"
                    android:hint="@string/enter_your_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:id="@+id/phone_boy_id"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_your_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:id="@+id/password_boy_id"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



                <Button
                    android:id="@+id/registered_boy"
                    android:textColor="@color/white"
                    android:text="@string/registered"
                    android:layout_marginTop="80dp"
                    android:background="@color/dark2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>



        </LinearLayout>




    </ScrollView>







</LinearLayout>